fixed spacing
on navbar

--- a/source/index/main-css.css
+++ b/source/index/main-css.css
@@ -110,7 +110,7 @@ iframe	  {
     font-weight: lighter;
     font-size: 20px;
     text-align: center;
-    padding: 7px 0px 20px 0px;
+    padding: 10px 0px 10px 0px;
     text-decoration: none;
     
 }
